--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2 class="title">My projects</h2>
             <div class="serv-content">
                 <div class="card">
-                    <a href="https://www.google.com" class="links">
+                    <a href="https://github.com/foram-16/loan-eligilblity-prediction.git" class="links">
                         <div class="box">
 
                             <div class="text">Loan eligibility Prediction</div>
@@ -89,7 +89,24 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="https://www.google.com" class="links">
+                    <a href="https://github.com/foram-16/loan-eligilblity-prediction.git" class="links">
+                        <div class="box">
+
+                            <div class="text">Banking System</div>
+                            <ul>
+                                <li>The main objective of this project to design easy to use,user friendly and responsive Banking System.
+                                </li>
+                                <li>In this project,I have design Banking System using Java, Netbeans, Jswing, XAMPP, MYSQL.
+                                </li>
+
+                            </ul>
+
+
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="https://github.com/foram-16/smart-attendance-system.git" class="links">
                         <div class="box">
 
                             <div class="text">Smart Attedence System </div>
