--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="https://www.google.com" class="links">
+                    <a href="https://github.com/foram-16/smart-attendance-system.git" class="links">
                         <div class="box">
 
                             <div class="text">Motion sensor light</div>
