--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <a href="https://github.com/foram-16/smart-attendance-system.git" class="links">
                         <div class="box">
 
-                            <div class="text">Motion sensor light</div>
+                            <div class="text">Motion-sensor-light</div>
                             <ul>
                                 <li>The main objective of this project to design smart light which reduce power consumption in absence of human activity
                                 </li>
