--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="text">I'm Foram and I'm a <span class="typing-2"></span></div>
                     <p>I am Information communication student.I am looking for a challenging career and be a part ofan esteemed organisation and to work in a growth oriented and challenging environment that will give me a scope to enhance my knowledge and
                         utilize my skills towards the growth of the organization. </p>
-                    <a href="https://drive.google.com/file/d/1wPyE4SvnzV5gmgV9kv-7lweo1WOcm4kb/view?usp=sharing">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1m8IN5RZnZVmtPRWuf8GZPukCl1HxZ_9q/view">Download CV</a>
                 </div>
             </div>
         </div>
